<resources>
    <string name="app_name">EADapp</string>
    <string name="app_logo">app logo</string>
    <string name="app_logo_no_text">in app logo</string>

    <string name="login">LogIn</string>
    <string name="register">Register</string>

    <string name="owner_view_btn1">Restock</string>
    <string name="owner_view_btn2">Update Price</string>
    <string name="owner_view_btn3">Update Quota</string>
    <string name="owner_view_btn4">View Availability</string>
    <string name="owner_view_btn5">Update Availability</string>

    <string name="customer_view_btn1">Add New Vehicle</string>
    <string name="customer_view_btn2">View Quota</string>
    <string name="customer_view_btn3">Pump Fuel</string>
    <string name="customer_view_btn4">Fuel Availability</string>
    <string name="customer_view_btn5">Price List</string>

    <string name="anv_header">Register Vehicle</string>
    <string name="anv_input_text1">Vehicle Number</string>
    <string name="anv_input_text2">Chassis Number</string>
    <string name="anv_input_text3">Vehicle Type</string>
    <string name="anv_btn">Save</string>

    <string name="restock_header">Restock Station</string>
    <string name="restock_input_text1">Fuel Type</string>
    <string name="restock_input_text2">Restock Volume (Liter)</string>
    <string name="restock_input_text3">Arrival Date</string>
    <string name="restock_input_text4">Arrival Time</string>
    <string name="restock_btn1">Date</string>
    <string name="restock_btn2">Time</string>
    <string name="restock_btn3">Save</string>

    <string name="update_price_header">Fuel Price Updater</string>
    <string name="update_price_input_text1">Old Price (LKR)</string>
    <string name="update_price_input_text2">New Price (LKR)</string>
    <string name="update_price_btn1">Update</string>

    <string name="update_quota_header">Vehicle Fuel Quota Updater</string>
    <string name="update_quota_input_text1">Previous Quota (Liter)</string>
    <string name="update_quota_input_text2">New Quota (Liter)</string>
    <string name="update_quota_btn1">Update</string>

    <string name="update_availability_header">Station Fuel Availability</string>
    <string name="update_availability_btn1">Update</string>

    <string name="view_quota_header">Weekly Fuel Quota Allocation</string>

    <string name="check_prices_header">Weekly Fuel Price List</string>

    <string name="join_queue_header">Pump Fuel</string>
    <string name="join_queue_btn1">Join Queue</string>
    <string name="join_queue_btn2">Exit After Pump Fuel</string>
    <string name="join_queue_btn3">Exit Before Pump Fuel</string>

    <string name="vehicle_type_spinner">Select Vehicle Type</string>
    <string-array name="vehicle_types_array">
        <item>Select Vehicle Type</item>
        <item>Car</item>
        <item>Bike</item>
        <item>Van</item>
        <item>Three-Wheel</item>
        <item>Tractor</item>
        <item>SUV</item>
        <item>Long-Vehicle</item>
    </string-array>

    <string name="fuel_type_spinner">Select Fuel Type</string>
    <string-array name="fuel_types_array">
        <item>Select Fuel Type</item>
        <item>Petrol (92 Octane)</item>
        <item>Petrol (95 Octane)</item>
        <item>Auto Diesel</item>
        <item>Super Diesel</item>
        <item>Kerosene</item>
        <item>Naphtha</item>
    </string-array>

    <string name="fuel_availability_status_spinner">Availability Status</string>
    <string-array name="fuel_availability_status_array">
        <item>Select Availability</item>
        <item>Available</item>
        <item>Unavailable</item>
    </string-array>

    <string name="UserRegistrationViewTextView">User Registration</string>
    <string name="UserRegistrationViewEditText1">Name</string>
    <string name="UserRegistrationViewEditText2">NIC</string>
    <string name="UserRegistrationViewEditText3">Contact No</string>
    <string name="UserRegistrationViewEditText4">Password</string>
    <string name="OwnerRegistrationViewTextView">Owner Registration</string>
    <string name="OwnerRegistrationViewEditText1">Name</string>
    <string name="OwnerRegistrationViewEditText2">NIC</string>
    <string name="OwnerRegistrationViewEditText3">Contact No</string>
    <string name="OwnerRegistrationViewEditText4">Station ID</string>
    <string name="OwnerRegistrationViewEditText5">Password</string>
    <string name="OwnerRegistrationViewButton">Register</string>
    <string name="UserRegistrationViewButton">Register</string>
    <string name="UserLoginViewTextView">Login</string>
    <string name="UserLoginViewEditText1">NIC</string>
    <string name="UserLoginViewEditText2">Password</string>
    <string name="UserLoginViewButton">Login</string>

    <string-array name="station_array">
        <item>Select Station</item>
        <item>Station A</item>
        <item>Station B</item>
        <item>Station C</item>
        <item>Station D</item>
        <item>Station E</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>