<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewVehicle"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/anv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingBottom="40dp"
            android:text="@string/anv_header"
            android:textColor="#26C6DA"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/anv_input_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/anv_input_text1"
            android:textColor="#B0BEC5"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/anv_input_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/anv_input_text2"
            android:textColor="#B0BEC5"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/anv_input_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/vehicle_type_spinner"
            android:contentDescription="@string/anv_input_text3"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/anv_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anv_btn"
            android:backgroundTint="#00C2CB"
            android:fontFamily="monospace"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>