<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restock"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/restock_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingBottom="40dp"
            android:text="@string/restock_header"
            android:textColor="#26C6DA"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/restock_input_fuel_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:autofillHints="@string/fuel_type_spinner"
            android:contentDescription="@string/fuel_type_spinner"
            android:minHeight="48dp"
            android:outlineProvider="none" />

        <EditText
            android:id="@+id/restock_input_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/restock_input_text2"
            android:textColor="#B0BEC5"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/restock_btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00C2CB"
                android:fontFamily="monospace"
                android:text="@string/restock_btn1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                style="?android:spinnerStyle"
                android:onClick="openDatePicker"/>

            <Button
                android:id="@+id/restock_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00C2CB"
                android:fontFamily="monospace"
                android:text="@string/restock_btn2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="popTimePicker"/>

        </LinearLayout>

        <Button
            android:id="@+id/restock_btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00C2CB"
            android:fontFamily="monospace"
            android:text="@string/restock_btn3"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>