<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateQuota"
    android:background="@drawable/background_gradient">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/update_quota_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:paddingBottom="40dp"
            android:text="@string/update_quota_header"
            android:textColor="#26C6DA"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/update_quota_input_vehicle_spinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:autofillHints="@string/vehicle_type_spinner"
            android:contentDescription="@string/vehicle_type_spinner"
            android:minHeight="48dp"
            android:outlineProvider="none" />

        <EditText
            android:id="@+id/update_quota_input_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/update_quota_input_text1"
            android:textColor="#B0BEC5"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/update_quota_input_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="monospace"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:hint="@string/update_quota_input_text2"
            android:textColor="#B0BEC5"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/update_quota_btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00C2CB"
            android:fontFamily="monospace"
            android:text="@string/update_quota_btn1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>